[package]
name = "hagin_gwichanko"
version = "0.1.0"
edition = "2021"

[dependencies]
uiautomation = "0.12.0"

tray-icon = "0.20.1"
winit = "0.30.10"
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }

iced_winit = "0.13"
iced_wgpu = "0.13"
iced_widget = "0.13"
iced_core = "0.13"
iced_renderer = { version = "0.13", features = ["wgpu"] }

chrono = "0.4"
bytemuck = "1.15.0"
glam = { version="0.27.0", features=[ "bytemuck" ] }
sysinfo = "0.36.0"
widestring = "1.0"

image = "0.25.6"
ico = "0.3"

[build-dependencies]
embed-resource = "3.0.2"
